--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.9"
 dependencies = [
     "dashscope>=1.23.8",
     "langchain-community>=0.3.27",
+    "langchain-tavily>=0.2.7",
     "langgraph>=0.2.6",
     "pytest>=8.4.1",
     "python-dotenv>=1.0.1",
